--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Productos
+                Productoss
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="guitarras.html">Guitarras</a></li>
