--- a/oferta.html
+++ b/oferta.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Oferta</title>
@@ -52,7 +52,7 @@
     </header>
 
 
-    <main class="producto-container2">
+<main class="oferta-pagina">
         <div class="galeria">
             <img src="img/lespaul.png" class="thumb active" alt="">
             <img src="img/lespaul2.png" class="thumb" alt="">
@@ -67,22 +67,24 @@
         <div class="info-producto">
             <h1>Guitarra eléctrica Jet Guitars JL500 GD Les Paul</h1>
             <p class="sku">SKU: JET-JL500GD</p>
-            <p class="oferta">-13% OFF</p>
+            <p class="off">-13% OFF</p>
             <h2 class="precio">$750.000</h2>
             <p class="transferencia">$600.000 con transferencia o depósito</p>
 
             <button class="btn-comprar">Agregar al carrito</button>
 
+        </div>
 
-            <div class="descripcion">
-                <p>JET Guitars es una nueva marca de guitarras eléctricas creada para el disfrute de músicos de todos
+        <div class="descripcion">
+            <h1>INFORMACION DEL PRODUCTO</h1>
+            
+            <p>JET Guitars es una nueva marca de guitarras eléctricas creada para el disfrute de músicos de todos
                     los niveles y habilidades. Inspiradas en las clásicas guitarras de alta gama, las guitarras JET
-                    ofrecen
-                    un enfoque moderno en diseño y estilo, con una emocionante y fresca selección de colores, acabados y
+                    ofrecen un enfoque moderno en diseño y estilo, con una emocionante y fresca selección de colores, acabados y
                     maderas de alta calidad. Lo más importante es que las guitarras JET ofrecen una experiencia premium
                     a un precio accesible.</p>
 
-                <p>La Jet Guitars JL-500 Rosewood eléctrica es una guitarra que presume de una sensación increíblemente
+            <p>La Jet Guitars JL-500 Rosewood eléctrica es una guitarra que presume de una sensación increíblemente
                     satisfactoria y un sonido sumamente dinámico. Sus dos pastillas humbucker de alnico ofrecen un golpe
                     sónico poderoso que es perfecto para obtener un sonido grueso y agresivo con ganancia. Sin embargo,
                     también son muy dinámicas y pueden manejar cualquier género musical que les presentes. Tendrás mucha
@@ -91,9 +93,9 @@
                     un
                     fácil acceso a todos los trastes. Es perfecta para cualquier guitarrista.</p>
 
-                <h2>Potencia dual de las pastillas humbucker</h3>
+            <h2>Potencia dual de las pastillas humbucker</h2>
 
-                    <p>Proyecta tus riffs con fuerza. Gracias al par de potentes pastillas humbucker de esta guitarra,
+            <p>Proyecta tus riffs con fuerza. Gracias al par de potentes pastillas humbucker de esta guitarra,
                         podrás aumentar considerablemente tu sonido y crear un impacto serio. Imagina a tu audiencia
                         siendo
                         golpeada por una pared de maravillas sónicas. Estas pastillas funcionan especialmente bien con
@@ -102,20 +104,20 @@
                         graves ricos y profundos con la pastilla del mástil, mientras que la del puente ofrece un medio
                         nítido y mordaz que se destaca en la mezcla.</p>
 
-                <h2>Especificaciones</h2>
+            <h2>ESPECIFICACIONES</h2>
 
-                <h2>Mástil y Diapasón</h2>
+            <h2>Mástil y Diapasón</h2>
 
-                    <p>Material del mástil: Caoba
+            <p>Material del mástil: Caoba
                         Perfil del mástil: 'Modern C'
                         Longitud de escala: 24.75 pulgadas
                         Diapasón: Palisandro
                         Trastes: 22 medianos Jumbo, ancho de 2.7mm
                         Material del traste: Níquel</p>
 
-                <h2>Hardware y electrónica</h2>
+            <h2>Hardware y electrónica</h2>
 
-                    <p>Ceja de las cuerdas: Simil Hueso
+            <p>Ceja de las cuerdas: Simil Hueso
                         Ancho de la cejuela: 1.65 pulgadas
                         Marcadores de posición: Trapezoidales blancos
                         Pastilla del puente: Alnico Humbucker
@@ -125,16 +127,12 @@
                         Clavijeros: Cromo
                         Golpeador: Blanco
                         Perillas de control: Doradas
-
                         Peso: 3,5 Kg</p>
-            </div>
-
-
         </div>
-        </div>
-    </main>
 
-</body>
+</main>
+
+
 
 <footer>
     <nav>
@@ -151,5 +149,7 @@
     <h4>| TEL: 223-534 5435. Argentina | Mar del Plata</h4>
 
 </footer>
+
+</body>
 
 </html>
