--- a/baterias.html
+++ b/baterias.html
@@ -80,14 +80,19 @@
     <div class="wpp">
         <img src="img/WhatsApp.svg.png" alt="">
     </div>
-    
+
+
     <footer>
 
-
-        <h4>© 2025 MusiHouse.</h4>
-        <h4>| TEL: 223-534 5435. Argentina | Mar del Plata</h4>
+        <h4 class="telefono">TEL: 223-534 5435.</h4>
+        <h4 class="año">© 2025 MusiHouse.</h4>
+        <h4 class="localidad">Argentina | Mar del Plata</h4>
+        <img class=redesfooter src="img/REDES.png" alt="">
 
     </footer>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
