--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="ESTILOS.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>MusiHouse</title>
@@ -68,9 +68,9 @@
                 <h2>¡oferta semanal!</h2>
                 <h3>Guitarra Electrica Jet <br> Guitars JL500 GD Les Paul</h3>
                 <h4>Transferencia/efectivo</h4>
-                <h3>$750.000</h5>
+                <h3>$750.000</h3>
                 <a href="oferta.html">
-                    <button type="button" href="oferta.html" class="btn btn-danger">Ver más</button>
+                    <a href="oferta.html" class="btn btn-danger">Ver más</a>
                 </a>
             </div>
 
@@ -90,8 +90,10 @@
 
     <footer>
 
-        <h4>© 2025 MusiHouse.</h4>
-        <h4>| TEL: 223-534 5435. Argentina | Mar del Plata</h4>
+        <h4 class="telefono">TEL: 223-534 5435.</h4>
+        <h4 class="año">© 2025 MusiHouse.</h4>
+        <h4 class="localidad">Argentina | Mar del Plata</h4>
+        <img class=redesfooter src="img/REDES.png" alt="">
 
     </footer>
     
