--- a/oferta.html
+++ b/oferta.html
@@ -134,21 +134,16 @@
 
 
 
-<footer>
-    <nav>
-        <ul class="menu">
-            <li><a href="index.html">inicio</a></li>
-            <li><a href="guitarras.html">guitarras</a></li>
-            <li><a href="baterias.html">baterias</a></li>
-            <li><a href="servicios.html">servicios</a></li>
-            <li><a href="contacto.html">contacto</a></li>
-        </ul>
-    </nav>
+    <footer>
 
-    <h4>© 2025 MusiHouse.</h4>
-    <h4>| TEL: 223-534 5435. Argentina | Mar del Plata</h4>
+        <h4 class="telefono">TEL: 223-534 5435.</h4>
+        <h4 class="año">© 2025 MusiHouse.</h4>
+        <h4 class="localidad">Argentina | Mar del Plata</h4>
+        <img class=redesfooter src="img/REDES.png" alt="">
 
-</footer>
+    </footer>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 </body>
 
